# mixtiles-exercise-be

./: README.md  pyproject.toml
data/: lifeStories_MAX_PHOTOS_TO_PROCESS_1000.json  lifeStories_MAX_PHOTOS_TO_PROCESS_200.json  photos.json
src/mixtiles_exercise_be/: consts.py  generate_photos_life_stories.py  get_descriptions.py  get_exif_data.py  get_life_stories.py  get_output_file_format.py  get_photos.py
